# SoftLit

./: .gitignore  .gitmodules  CMakeLists.txt  Display.cpp  Display.h  LICENSE  MathUtils.h  Matrix.h  Primitive.cpp  Primitive.h  README.md  Rasterizer.cpp  Rasterizer.h  RasterizerConfig.h  Shaders.h  SoftLit.cpp  SoftLit.sln  Texture.cpp  Texture.h  Utils.h  Vector.h  stb_image.h  stdafx.h
SoftLit/: ReadMe.txt  SoftLit.vcxproj  SoftLit.vcxproj.filters
assets/: SEE.md
gallery/: README.md
